--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         function generateNextTarget() {
             if(numbersPlaced >= TARGET_GOAL) {
                 const container = document.getElementById('source-container');
-                container.innerHTML = `<div style="color:#28a745; font-weight:bold; font-size:24px;">Done!</div>`;
+                container.innerHTML = `<div style="color:#28a745; font-weight:bold; font-size:24px;">Thank you!</div>`;
                 document.getElementById('finishBtn').style.display = 'block';
                 return;
             }
